--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://i.ibb.co/fCgpc03/bolt.png" />
+    <link rel="icon" href="" />
     <link
       rel="stylesheet"
       type="text/css"
